--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
+- BUG: Top favorite quotes are calculated only through current page votes 
 - Hit counter for each quote
 - Caching and minify of static resources
